--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.48.0",
+    "eslint-plugin-solid": "^0.13.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
