--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "isolatedModules": true,
     "baseUrl": ".",
     "paths": {
-      "@lib/*": ["src/lib/*"]
+      "@app/*": ["src/*"]
     }
   }
 }
