--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.48.0",
-    "eslint-plugin-solid": "^0.13.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.1",
+    "@types/node": "^20.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-solid": "^0.13.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-solid": "^2.5.0"
+    "vite-plugin-solid": "^2.8.0"
   },
   "dependencies": {
-    "@primer/css": "^20.8.3",
-    "solid-js": "^1.6.10"
+    "@primer/css": "^21.1.1",
+    "gifuct-js": "^2.1.2",
+    "solid-js": "^1.8.8"
   }
 }
