--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.10.8",
+    "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-plugin-solid": "^0.13.1",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-eslint": "^1.8.1",
@@ -23,6 +26,6 @@
   "dependencies": {
     "@primer/css": "^21.1.1",
     "gifuct-js": "^2.1.2",
-    "solid-js": "^1.8.10"
+    "solid-js": "^1.8.11"
   }
 }
